# GHT60_Report

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: Utils.hpp  UtilsIntr.hpp
resources/: resources.qrc
resources/qml/: Main.qml
src/: Utils.cpp  UtilsIntr.cpp  main.cpp
template/: GHT-2BReportTemplate.xlsx
